# saliency

./: .gitignore  Dockerfile  Dockerfile.tpu  README.md  config.py  data.py  download.py  justfile  main.py  model.py  pyproject.toml  utils.py  vertex-ai-config.yaml
docs/knowledge/: weight-format-compatibility.md
docs/plans/: mac-metal-gpu-optimization.md  vertex-ai-training.md
docs/research/: 2025-12-10-adding-new-dataset.md  2025-12-10-vertex-ai-training.md  2025-12-11-mac-m3-ultra-gpu-optimization.md
