[project]
name = "saliency"
version = "1.0.0"
description = "Contextual Encoder-Decoder Network for Visual Saliency Prediction (MSI-Net)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Alexander Kroner" }
]
keywords = ["saliency", "deep-learning", "tensorflow", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "gdown>=5.0.0",
    "h5py>=3.10.0",
    "imageio>=2.33.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "tensorflow>=2.15.0",
]

[project.optional-dependencies]
gpu = [
    "tensorflow[and-cuda]>=2.15.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
